--- a/afb-helpers3.pc.in
+++ b/afb-helpers3.pc.in
@@ -28,6 +28,6 @@ Name: afb-helpers3
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 URL: @PROJECT_URL@
-Libs: -L${libdir} -lafb-helpers3
-Cflags: -I${includedir} -I${includedir}/afb-helpers3
+Libs: -L${libdir} -lafb-helpers
+Cflags: -I${includedir} -I${includedir}/afb-helpers
 
