Split sources in 2: helpers-v3 and helpers-v4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,109 +57,9 @@ link_libraries(${AFB_LINK_LIBRARIES})
 add_compile_options(${AFB_CFLAGS})
 
 if(${AFB_HELPERS_V3})
-
-    set(AFB_HELPERS_SRCS_V3
-        curl-wrap.c
-        escape.c
-        filescan-utils.c
-        wrap-base64.c
-        wrap-json.c
-        afb-timer.c
-    )
-
-    set(AFB_HELPERS_HEADERS_V3
-        afb-helpers-utils.h
-        curl-wrap.h
-        escape.h
-        filescan-utils.h
-        json.hpp
-        wrap-base64.h
-        wrap-json.h
-        afb-timer.h
-    )
-
-    find_package(CURL REQUIRED)
-
-    pkg_check_modules(DEPv3 REQUIRED json-c libsystemd)
-
-    ADD_LIBRARY(afb-helpers3 SHARED ${AFB_HELPERS_SRCS_V3})
-    target_include_directories(afb-helpers3 PRIVATE ${DEPv3_INCLUDE_DIRS})
-    target_compile_options(afb-helpers3 PRIVATE ${DEPv3_CFLAGS} -fPIC)
-    target_compile_definitions(afb-helpers3 PUBLIC -DAFB_BINDING_VERSION=3)
-    target_link_options(afb-helpers3 PRIVATE ${DEPv3_LDFLAGS})
-    target_link_libraries(afb-helpers3 PUBLIC ${DEPv3_LINK_LIBRARIES} curl)
-    set_target_properties(afb-helpers3 PROPERTIES OUTPUT_NAME afb-helpers SOVERSION 3)
-    INSTALL(TARGETS afb-helpers3 DESTINATION ${CMAKE_INSTALL_LIBDIR})
-    INSTALL(FILES ${AFB_HELPERS_HEADERS_V3} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/afb-helpers)
-
-    CONFIGURE_FILE(afb-helpers3.pc.in afb-helpers3.pc @ONLY)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers3.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers3.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig RENAME afb-helpers.pc)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers3.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig RENAME afb-libhelpers.pc)
+    add_subdirectory(helpers-v3)
 endif()
 
 if(${AFB_HELPERS_V4})
-
-    # Define targets
-    pkg_check_modules(DEPv4 REQUIRED json-c librp-utils)
-
-    add_library(afb-helpers4 SHARED
-        afb-data-utils.c
-        afb-req-utils.c
-        plugin-store.c
-    )  
-    target_include_directories(afb-helpers4 PRIVATE ${DEPv4_INCLUDE_DIRS})
-    target_compile_options(afb-helpers4 PRIVATE ${DEPv4_CFLAGS} -fPIC)
-    target_compile_definitions(afb-helpers4 PUBLIC -DAFB_BINDING_VERSION=4)
-    target_link_options(afb-helpers4 PRIVATE ${DEPv4_LDFLAGS})
-    target_link_libraries(afb-helpers4 PUBLIC ${DEPv4_LINK_LIBRARIES} ${CMAKE_DL_LIBS})
-    set_target_properties(afb-helpers4 PROPERTIES SOVERSION 4)
-    INSTALL(TARGETS afb-helpers4 DESTINATION ${CMAKE_INSTALL_LIBDIR})
-    INSTALL(FILES 
-            afb-helpers-utils.h
-            afb-data-utils
-            afb-data-utils.h
-            afb-req-utils.h
-            plugin-store.h
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/afb-helpers4)
-
-    CONFIGURE_FILE(afb-helpers4.pc.in afb-helpers4.pc @ONLY)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers4.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-
-    add_library(afb-helpers4-static STATIC
-        afb-data-utils.c
-        afb-req-utils.c
-        plugin-store.c
-    )  
-    target_include_directories(afb-helpers4-static PRIVATE ${DEPv4_INCLUDE_DIRS})
-    target_compile_options(afb-helpers4-static PRIVATE ${DEPv4_CFLAGS} -fPIC)
-    target_compile_definitions(afb-helpers4-static PUBLIC -DAFB_BINDING_VERSION=4)
-    target_link_options(afb-helpers4-static PRIVATE ${DEPv4_LDFLAGS})
-    target_link_libraries(afb-helpers4-static PUBLIC ${DEPv4_LINK_LIBRARIES} ${CMAKE_DL_LIBS})
-    set_target_properties(afb-helpers4-static PROPERTIES VERSION 4 OUTPUT_NAME afb-helpers4)
-    INSTALL(TARGETS afb-helpers4-static DESTINATION ${CMAKE_INSTALL_LIBDIR})
-
-    CONFIGURE_FILE(afb-helpers4-static.pc.in afb-helpers4-static.pc @ONLY)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers4-static.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-
-    add_library(afb-helpers++4 SHARED
-        afb-data-utils.cpp
-    )
-    target_include_directories(afb-helpers++4 PRIVATE ${DEPv4_INCLUDE_DIRS})
-    target_compile_options(afb-helpers++4 PRIVATE ${DEPv4_CFLAGS} -fPIC)
-    target_compile_definitions(afb-helpers++4 PUBLIC -DAFB_BINDING_VERSION=4)
-    target_link_options(afb-helpers++4 PRIVATE ${DEPv4_LDFLAGS})
-    target_link_libraries(afb-helpers++4 PUBLIC ${DEPv4_LINK_LIBRARIES} afb-helpers4)
-    set_target_properties(afb-helpers++4 PROPERTIES SOVERSION 4)
-    INSTALL(TARGETS afb-helpers++4 DESTINATION ${CMAKE_INSTALL_LIBDIR})
-    INSTALL(FILES
-            afb-data-utils
-            afb-data-utils.hpp
-        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/afb-helpers4)
-
-    CONFIGURE_FILE(afb-helpers++4.pc.in afb-helpers++4.pc @ONLY)
-    INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers++4.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
-
-
+    add_subdirectory(helpers-v4)
 endif()
-
