--- a/helpers-v3/afb-helpers3.pc.in
+++ b/helpers-v3/afb-helpers3.pc.in
@@ -1,5 +1,5 @@
 ##
-## Copyright (C) 2016, 2017, 2018 "IoT.bzh"
+## Copyright (C) 2016-2024 IoT.bzh Company
 ##
 ## This file is part of afb-daemon project.
 ##
